--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@gnosis/dao-module",
+  "name": "@gnosis/amb-module",
   "version": "1.0.0",
-  "description": "Snapshot DAO oracle module for the Gnosis Safe",
+  "description": "An Arbitrary Message Bridge (AMB) module for the Gnosis Safe",
   "directories": {
     "test": "test"
   },
