--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gnosis/AMBModule",
+  "name": "@gnosis/safe-bridge",
   "version": "1.0.0",
   "description": "An Arbitrary Message Bridge (AMB) module for the Gnosis Safe",
   "directories": {
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@gnosis.pm/mock-contract": "^4.0.0",
+    "@gnosis.pm/safe-contracts": "1.3.0",
     "argv": "^0.0.2",
     "dotenv": "^8.0.0",
     "ethers": "^5.0.19",
