--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zodiac/amb",
-  "version": "1.0.0",
+  "name": "@zodiacdao/amb",
+  "version": "0.0.1-prealpha1",
   "description": "An Arbitrary Message Bridge (AMB) module for the Gnosis Safe",
   "directories": {
     "test": "test"
@@ -22,7 +22,7 @@
   "author": "richard@gnosis.io",
   "license": "MIT",
   "devDependencies": {
-    "@gnosis/zodiac": "github:gnosis/zodiac#master",
+    "@zodiacdao/zodiac": "0.0.1-prealpha1",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
