--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "author": "richard@gnosis.io",
   "license": "MIT",
   "devDependencies": {
-    "@gnosis.pm/zodiac": "0.0.1-prealpha7",
+    "@gnosis.pm/zodiac": "1.0.1",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
