--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "hardhat compile",
     "test": "hardhat test",
     "deploy": "hardhat deploy --network",
+    "extract-mastercopy": "yarn run build && yarn hardhat mastercopy:extract",
+    "deploy-mastercopy": "yarn hardhat mastercopy:deploy --network",
+    "verify-mastercopy": "yarn hardhat mastercopy:verify --network",
     "coverage": "hardhat coverage",
     "lint": "yarn lint:sol && yarn lint:ts",
     "lint:sol": "solhint 'contracts/**/*.sol'",
@@ -24,45 +27,50 @@
   "author": "richard@gnosis.io",
   "license": "MIT",
   "devDependencies": {
-    "@gnosis.pm/zodiac": "1.0.1",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-etherscan": "^2.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.21",
-    "@types/yargs": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
-    "chai": "^4.2.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
+    "@nomicfoundation/hardhat-ignition": "^0.15.5",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.5",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.7",
+    "@types/node": "^22.1.0",
+    "@types/yargs": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
+    "chai": "^4.3.7",
     "debug": "^4.2.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^8.0.0",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-no-only-tests": "^2.4.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "ethereum-waffle": "^3.2.0",
-    "hardhat": "2.6.4",
-    "hardhat-deploy": "^0.7.0-beta.38",
-    "husky": "^5.1.3",
-    "prettier": "^2.1.2",
-    "prettier-plugin-solidity": "^1.0.0-alpha.60",
-    "solhint": "^3.3.2",
-    "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.17",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "hardhat": "^2.22.8",
+    "hardhat-deploy": "^0.12.4",
+    "hardhat-gas-reporter": "^2.2.0",
+    "husky": "^9.1.4",
+    "prettier": "^3.3.3",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solhint": "^5.0.3",
+    "solhint-plugin-prettier": "^0.1.0",
+    "solidity-coverage": "^0.8.12",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.5.4",
+    "zodiac-core": "file:../zodiac-core"
   },
   "dependencies": {
     "@gnosis.pm/mock-contract": "^4.0.0",
-    "@openzeppelin/contracts": "^4.3.1",
-    "argv": "^0.0.2",
-    "dotenv": "^8.0.0",
-    "ethers": "^5.0.19",
-    "solc": "0.8.1",
-    "yargs": "^16.1.1"
-  },
-  "resolutions": {
-    "bitcore-lib": "8.25.0"
+    "@nomicfoundation/hardhat-ethers": "^3.0.6",
+    "@openzeppelin/contracts": "^5.0.2",
+    "argv": "^0.0.3",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.2",
+    "solc": "^0.8.26",
+    "yargs": "^17.7.2"
   }
 }
